--- a/templates/bashrc.j2
+++ b/templates/bashrc.j2
@@ -142,3 +142,13 @@ PATH="~/.local/bin${PATH:+:${PATH}}"
 if [[ $- =~ .*i.* ]]; then bind '"\C-r": "\C-a hstr -- \C-j"'; fi
 # if this is interactive shell, then bind 'kill last command' to Ctrl-x k
 if [[ $- =~ .*i.* ]]; then bind '"\C-xk": "\C-a hstr -k \C-j"'; fi
+
+#-------------------------
+# Autocomplete
+#-------------------------
+source <(kubectl completion bash)
+source <(k3sup completion bash)
+source <(cmctl completion bash)
+source <(minikube completion bash)
+source <(datree completion bash)
+
